# rustifact_derive

./: Cargo.toml  README.md
src/: lib.rs
