[package]
name = "rustifact_derive"
version = "0.1.1"
edition = "2021"
description = "A derive macro for rustifact::ToTokenStream"
license = "MPL-2.0"
repository = "https://github.com/mbaulch/rustifact_derive"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
syn = { version = "2.0.22", features = ["parsing"] }
proc-macro2 = "1.0.63"
